# rustification

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/user/: controller.rs  mod.rs  models.rs  router.rs  service.rs
