[package]
name = "rustification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-actix-native-tls", "macros"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
